# oclmp

./: .gitignore  CMakeLists.txt  README.md
src/: computation.cpp  computation.hpp  kernels.cpp  kernels.hpp  main.cpp  ocl_manager.hpp  oclmp.cpp  oclmp.hpp  types.cpp  types.hpp  util.cpp  util.hpp
src/opencl/: add_mul.cl  add_sub.cl  bitops.cl  mul.cl
tests/: test_add.cpp  test_mul.cpp  test_ops.cpp  test_util.hpp
tests/perf/: perf_prime_factoring.cpp  perf_test.cpp
